--- a/src/com/barosanu/view/MainWindow.fxml
+++ b/src/com/barosanu/view/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.web.WebView?>
 
 
-<AnchorPane prefHeight="699.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barosanu.controller.MainWindowController">
+<AnchorPane prefHeight="699.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <MenuBar prefHeight="25.0" prefWidth="1085.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
