Add options aplying handling

--- a/src/com/barosanu/view/OptionsWindow.fxml
+++ b/src/com/barosanu/view/OptionsWindow.fxml
@@ -13,7 +13,7 @@
       <ChoiceBox fx:id="themePicker" layoutX="163.0" layoutY="175.0" prefHeight="25.0" prefWidth="264.0" />
       <Label layoutX="38.0" layoutY="127.0" text="Font size" />
       <Label layoutX="38.0" layoutY="179.0" text="Color theme" />
-      <Label layoutX="195.0" layoutY="51.0" prefHeight="17.0" prefWidth="143.0" text="Options" />
+      <Label layoutX="195.0" layoutY="51.0" prefHeight="17.0" prefWidth="143.0" styleClass="big" text="Options" />
       <Button layoutX="375.0" layoutY="253.0" mnemonicParsing="false" onAction="#cancelButtonAction" text="Cancel" />
       <Button layoutX="315.0" layoutY="253.0" mnemonicParsing="false" onAction="#applyButtonAction" text="Apply" />
    </children>
