--- a/src/com/barosanu/view/css/themeLight.css
+++ b/src/com/barosanu/view/css/themeLight.css
@@ -1,9 +1,39 @@
 *{
-    -fx-background-color: white;
-    -fx-text-fill: black;
-
+    -fx-background-color: #c5d6d9;
 }
 
 .big{
-   -fx-text-fill: #35568c;
+   -fx-font-size: 16pt;
+}
+
+Button, Label, ChoiceBox, Slider {
+    -fx-text-fill: #394345;
+}
+
+Button {
+    -fx-background-color: #b2ccd1;
+}
+
+Button:hover {
+    -fx-background-color: #a1bbc0;
+}
+
+ChoiceBox >* {
+    -fx-background-color: #b2ccd1;
+}
+
+Slider .axis {
+    -fx-tick-label-fill: #394345;
+}
+
+Slider .track {
+    -fx-background-color: #b2ccd1;
+}
+
+Slider .track:hover {
+    -fx-background-color: #a1bbc0;
+}
+
+Slider .thumb {
+    -fx-background-color: #686e7d;
 }
