--- a/src/com/barosanu/view/MainWindow.fxml
+++ b/src/com/barosanu/view/MainWindow.fxml
@@ -35,11 +35,11 @@
       <TreeView fx:id="emailsTreeView" layoutY="25.0" prefHeight="674.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="25.0" />
       <TableView fx:id="emailsTableView" layoutX="200.0" layoutY="25.0" prefHeight="189.0" prefWidth="885.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
         <columns>
-          <TableColumn prefWidth="161.0" text="Sender" />
-          <TableColumn minWidth="0.0" prefWidth="289.0" text="Subject" />
-            <TableColumn prefWidth="206.0" text="Recipient" />
-            <TableColumn prefWidth="90.0" text="Size" />
-            <TableColumn prefWidth="123.0" text="Date" />
+          <TableColumn fx:id="senderCol" prefWidth="161.0" text="Sender" />
+          <TableColumn fx:id="subjectCol" minWidth="0.0" prefWidth="289.0" text="Subject" />
+            <TableColumn fx:id="recipientCol" prefWidth="206.0" text="Recipient" />
+            <TableColumn fx:id="sizeCol" prefWidth="90.0" text="Size" />
+            <TableColumn fx:id="dateCol" prefWidth="123.0" text="Date" />
         </columns>
       </TableView>
       <WebView fx:id="emailWebView" layoutX="200.0" layoutY="214.0" prefHeight="485.0" prefWidth="885.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="214.0" />
