--- a/src/com/barosanu/view/MainWindow.fxml
+++ b/src/com/barosanu/view/MainWindow.fxml
@@ -18,6 +18,7 @@
               <MenuItem mnemonicParsing="false" text="Close" />
                   <MenuItem mnemonicParsing="false" text="Open" />
                   <MenuItem mnemonicParsing="false" onAction="#AddAccountAction" text="Add account" />
+                  <MenuItem mnemonicParsing="false" onAction="#composeMessageAction" text="Compose message" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
