--- a/src/com/barosanu/view/MainWindow.fxml
+++ b/src/com/barosanu/view/MainWindow.fxml
@@ -17,7 +17,7 @@
             <items>
               <MenuItem mnemonicParsing="false" text="Close" />
                   <MenuItem mnemonicParsing="false" text="Open" />
-                  <MenuItem mnemonicParsing="false" onAction="#AddAccountAction" text="Add account" />
+                  <MenuItem mnemonicParsing="false" onAction="#addAccountAction" text="Add account" />
                   <MenuItem mnemonicParsing="false" onAction="#composeMessageAction" text="Compose message" />
             </items>
           </Menu>
