--- a/src/com/barosanu/view/ComposeMessageWindow.fxml
+++ b/src/com/barosanu/view/ComposeMessageWindow.fxml
@@ -13,10 +13,11 @@
       <Label layoutX="29.0" layoutY="95.0" prefHeight="17.0" prefWidth="84.0" text="Subject" />
       <TextField fx:id="subjectTextField" layoutX="113.0" layoutY="91.0" prefHeight="25.0" prefWidth="446.0" />
       <TextField fx:id="recipientTextField" layoutX="113.0" layoutY="61.0" prefHeight="25.0" prefWidth="446.0" />
-      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="29.0" layoutY="133.0" prefHeight="410.0" prefWidth="528.0" />
+      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="29.0" layoutY="166.0" prefHeight="377.0" prefWidth="528.0" />
       <Button layoutX="485.0" layoutY="554.0" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="25.0" prefWidth="72.0" text="Send" />
       <Label fx:id="errorLabel" layoutX="29.0" layoutY="558.0" prefHeight="17.0" prefWidth="378.0" />
       <Label layoutX="29.0" layoutY="36.0" text="Account" />
       <ChoiceBox fx:id="emailAccountChoice" layoutX="113.0" layoutY="32.0" prefHeight="25.0" prefWidth="446.0" />
+      <Button layoutX="25.0" layoutY="129.0" mnemonicParsing="false" onAction="#attachButtonAction" text="Attach:" />
    </children>
 </AnchorPane>
